update plugin
