# wazo_confd_whitelist/whitelist/model.py
@@ -1,23 +1,15 @@
-from sqlalchemy import (
-    Column,
-    Integer,
-    String,
-    ARRAY,
-    Date,
-    Boolean
-)
+# model.py
+from sqlalchemy import Column, String
+from sqlalchemy.dialects.postgresql import UUID
 from xivo_dao.helpers.db_manager import UUIDAsString
-
 from ..db import Base
+import uuid
 
 
 class WhitelistModel(Base):
     __tablename__ = 'plugin_whitelist'
 
-    id = Column(Integer, primary_key=True)
-    tenant_uuid = Column(UUIDAsString(36), nullable=False)
-    ip_addresses = Column(ARRAY(String), nullable=True)  # List of IP addresses
-    domains = Column(ARRAY(String), nullable=True)       # List of domains
-    created_at = Column(Date, nullable=False)            # Creation date
-    expire_at = Column(Date, nullable=False)             # Expiration date
-    renew = Column(Boolean, nullable=False, default=False)  # Renewal status
+    uuid = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4)
+    unique_id = Column(String, unique=True, nullable=False, default=lambda: str(uuid.uuid4()))
+    url = Column(String, nullable=False)
+    customer_name = Column(String, nullable=False)
